src/angular-secure-password.css
.secureInput {
  border: 1px solid gray;
  border-radius: 4px;
  cursor: text;
  display: inline-block;
  margin: 5px;
  min-width: 150px;
  min-height: 24px;
  padding-left: 5px;
  padding-right: 15px;
  
  /* for Firefox */
  word-break: keep-all;
  white-space: nowrap;
}
.secureInput:focus {
  border: 2px inset;
  margin: 4px;
}

.secure-input {
  border-bottom: 1px solid rgba(0,0,0,0.12);
  cursor: text;
  display: inline-block;
  height: 24px;
  margin: 4px;
  min-width: 150px;
  padding-left: 5px;
  padding-right: 15px;
  
  /* for Firefox */
  word-break: keep-all;
  white-space: nowrap;
}
.secure-input:focus {
  border-bottom: 2px solid rgb(33,150,243);
  margin-bottom: 3px;
  outline: none;
}

.placeholder {
  color: #888;
  font-size: 16px;
  margin-left: -4px;
}

.password-symbol {
  font-weight: bold;
  font-size: 18px;
  /*word-spacing: -8px;*/
}

/* Based on http://codepen.io/ArtemGordinsky/pen/GnLBq */
.blinking-cursor {
  font-size: 20px;
  color: transparent;
  /*word-spacing: -8px;*/
}
.secureInput:focus .blinking-cursor, .secure-input:focus .blinking-cursor {
  -webkit-animation: 1s blink step-end infinite;
  -moz-animation: 1s blink step-end infinite;
  -ms-animation: 1s blink step-end infinite;
  -o-animation: 1s blink step-end infinite;
  animation: 1s blink step-end infinite;
}
@keyframes "blink" {
  from, to { color: transparent; }
  50% { color: black; }
}
@-moz-keyframes blink {
  from, to { color: transparent; }
  50% { color: black; }
}
@-webkit-keyframes "blink" {
  from, to { color: transparent; }
  50% { color: black; }
}
@-ms-keyframes "blink" {
  from, to { color: transparent; }
  50% { color: black; }
}
@-o-keyframes "blink" {
  from, to { color: transparent; }
  50% { color: black; }
}

